k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-notes
  labels:
    istio-injection: enabled
