k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-notes-app
  namespace: cloud-notes
  labels:
    app: cloud-notes-app
spec:
  type: ClusterIP
  selector:
    app: cloud-notes-app
  ports:
    - name: http
      port: 80
      targetPort: http
