k8s/base/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cloud-notes-app
  namespace: cloud-notes
spec:
  host: cloud-notes-app
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
