k8s/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cloud-notes-app
  namespace: cloud-notes
spec:
  hosts:
    - "*"
  gateways:
    - cloud-notes-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: cloud-notes-app
            port:
              number: 80
